--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,6 +24,7 @@
         <h1 class="main__heading main__heading--js">
           Maciej Mórawski - Strona domowa <a href="#stopka">Zapraszam</a>
         </h1>
+        <p>Od początku dnia minęło: <span class="time--js"></span></p>
         <button class="action--js">Zmień nagłówek</button>
       </header>
 
